Links en extras

--- a/1-guia/ejercicios-1-extra/ej-extra-1-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-1-1.tex
@@ -1,4 +1,4 @@
-\ejercicio\label{extra: \guia}
+\ejExtra
 Probar la propiedad distributiva: $X \inter (Y \union Z) = (X \inter Y) \union (X \inter Z)$\\
 
 \separadorCorto
