--- a/1-guia/ejercicios-1/ej-12-1.tex
+++ b/1-guia/ejercicios-1/ej-12-1.tex
@@ -204,9 +204,9 @@
 			      \hline
 			      \sim q \entonces \sim p & x^2 \leq 4 \entonces x \leq 3                    & \doceiiiuno  & A \stacktext{?}{\subseteq} B \to \Tilde                     \\
 			      \hline
-			      \sim p \lor q           & x \leq 3 \o x^2 > 4                              & \doceiiidos  & A \union B \stackrel{?}{=} \universo \to \Tilde             \\
+			      \sim p \lor q           & x \leq 3 \o x^2 > 4                              & \doceiiidos  & A \union B \igual{?} \universo \to \Tilde             \\
 			      \hline
-			      \sim (p \lor \sim q)    & \sim (x > 3 \y x^2 \leq 4 )                      & \doceiiitres & (A \inter B)^c \stackrel{?}{=}\vacio^c=\universo \to \Tilde \\
+			      \sim (p \lor \sim q)    & \sim (x > 3 \y x^2 \leq 4 )                      & \doceiiitres & (A \inter B)^c \igual{?}\vacio^c=\universo \to \Tilde \\
 			      \hline
 		      \end{array}
 	      $
