--- a/1-guia/ejercicios-1/ej-22-1.tex
+++ b/1-guia/ejercicios-1/ej-22-1.tex
@@ -74,7 +74,7 @@ antisimétrica, transitiva, de equivalencia o de orden.
 					            de \llamada{1}= h\cdot cf
 				            } \flecha{y}[acomodo]
 				            be \cdot \cancel{cd} = k \cdot h \cdot af \cdot \cancel{cd} \to
-				            \magenta{be \stackrel{\Tilde}= k' \cdot af}.
+				            \magenta{be \igual{\Tilde} k' \cdot af}.
 			            }$\\
 		            Se concluye que la relación es transitiva.
 	      \end{enumerate}
