--- a/1-guia/ejercicios-1/ej-7-1.tex
+++ b/1-guia/ejercicios-1/ej-7-1.tex
@@ -1,6 +1,6 @@
 \ejercicio
 $\flecha{del}[gráfico] (C \inter B) - A) \union (A - B) =\\
-	\flecha{uso que}[$A - B = A \inter B^c$] = (C \inter B \inter A^c) \union (A \inter B^c) \stackrel{\blue{*}}{=}\\
+	\flecha{uso que}[$A - B = A \inter B^c$] = (C \inter B \inter A^c) \union (A \inter B^c) \igual{\blue{*}}\\
 	\flecha{distributiva} C \union (A \inter B^c) \inter B \union (A \inter B^c) \inter A^c \union (A \inter B^c) =\\
 	= (C \union A) \inter (C \union B^c) \inter (B \union A) \inter (B \union B^c) \inter (A^c \union A) \inter (A^c \union B^c)=\\
 	= (C \union A) \inter (C \union B^c) \inter (B \union A) \inter \universo \inter \universo \inter (A^c \union B^c)=\\
