--- a/2-guia/ejercicios-2-extra/ej-extra-1-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-1-2.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\ejExtra
 Se cumple que: $\frac{(2n)!}{n!^2} \leq (n+1)!, \, \paratodo n \en \naturales$?
 \begin{enumerate}
 	\item La proposición: $p(n): \frac{(2n)!}{n!^2} \leq (n+1)! $
