--- a/2-guia/ejercicios-2/ej-5-2.tex
+++ b/2-guia/ejercicios-2/ej-5-2.tex
@@ -8,7 +8,7 @@
 	\item $
 		      \llaves{ l }{
 			      \text{Primer caso } n = 1 \to \sumatoria{1}{1} 2i -1 = 1 = 1^2 \Tilde\\
-			      \text{Paso inductivo } n = h \to \sumatoria{1}{k} 2i -1 = k^2 \Tilde \entonces \sumatoria{1}{k+1} 2i -1 \stackrel{\green{?}}= (k+1)^2\\
+			      \text{Paso inductivo } n = h \to \sumatoria{1}{k} 2i -1 = k^2 \Tilde \entonces \sumatoria{1}{k+1} 2i -1 \igual{\green{?}} (k+1)^2\\
 			      \sumatoria{1}{k+1} 2i -1 =
 			      \HI{
 				      \sumatoria{1}{k} 2i -1
