--- a/2-guia/ejercicios-2/ej-9-2.tex
+++ b/2-guia/ejercicios-2/ej-9-2.tex
@@ -52,7 +52,7 @@
 
 	\item $\suma1n \frac{1}{i ( i + 1 )} =
 	      \suma1n (\frac{1}{i}- \frac{1}{i+1}) =
-	      - \suma1n (\frac{1}{i+1} - \frac{1}{i} ) \overset{Aux}{=}
+	      - \suma1n (\frac{1}{i+1} - \frac{1}{i} ) \igual{Aux}
 	      - (\frac{1}{n+1}-\frac{1}{1}) \\$
 
 	      $ \text{\phantom{$ \suma1n \frac{1}{i(i+1)}$}}  =
@@ -94,7 +94,7 @@
 	      Sea $ a_n = \frac{1}{2n-1}$, donde $n \en \naturales $. Queremos calcular $ \suma1n \left(\frac{1}{2(i+1)-1} - \frac{1}{2i-1}\right)$.
 	      \begin{align*}
 		      \suma1n \left( \frac{1}{2(i+1)-1} - \frac{1}{2i-1}\right) =
-		      \suma1n \left(a_{i+1}- a_i \right) \overset{9i)}=
+		      \suma1n \left(a_{i+1}- a_i \right) \igual{9i)}
 		      a_{n+1} - a_1 =
 		      \frac{1}{2(n+1)-1} - \frac{1}{2\cdot 1-1}
 	      \end{align*}
