--- a/4-guia/ejercicios-4-extra/ej-extra-4-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-4-4.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\ejExtra
 
 \begin{enumerate}[label=\roman*)]
 	\item Calcular los posibles valores de: $(7^{n-1} + 5^{n+2} : 5\cdot 7^n - 5^{n+1})$.
