--- a/4-guia/ejercicios-4-extra/ej-extra-6-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-6-4.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\ejExtra
 Sean $a$, $b \en \enteros$ tal que $(a:b) = 6$. Hallar todos los $d = (2a + b : 3a - 2b)$ y dar un ejemplo en cada caso.\\
 \separadorCorto
 
