--- a/4-guia/ejercicios-4-extra/ej-extra-7-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-7-4.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\ejExtra
 Sea $a\en \enteros$ tal que $\congruencia{32a}{17}{9}$. Calcular $(a^3 + 4a + 1 : a^2 + 2)$
 
 \separadorCorto
