--- a/5-guia/ejercicios-5-extra/ej-extra-5-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-5-5.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\ejExtra
 Sea $n\en \naturales$ tal que $(n^{109} + 37:52) = 26$ y $(n^{63} -21:39) = 39$.
 Calcular el resto de dividir a $n$ por 156.
 
