--- a/6-guia/ejercicios-6-extra/ej-extra-2-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-2-6.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\ejExtra
 Sea $w \en G_{14}.$ Hallar todos los posibles valores de $w^7 + \sumatoria{j=7}{140}w^{2j}$
 
 \separadorCorto
