--- a/6-guia/ejercicios-6-extra/ej-extra-3-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-3-6.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\ejExtra
 Sea $z = \frac{\sqrt{3}}{2} - \frac{1}{2}i$. Hallar todos los $n \en \naturales$ que cumplen simultáneamente
 las siguientes condiciones:
 \begin{itemize}
