--- a/7-guia/ejercicios-7-extra/ej-extra-3-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-3-7.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\ejExtra
 Hallar \textbf{todos} los polinomios \textbf{mónicos} $f \en \racionales[X]$
 de grado mínimo que cumplan simultáneamente las siguientes condiciones:
 \begin{enumerate}[label=\roman*)]
