--- a/7-guia/ejercicios-7-extra/ej-extra-4-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-4-7.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\ejExtra
 Factorizar como producto de polinomios irreducibles en $\racionales[X], \reales[X], \complejos[X]$ al polinomio
 $$
 f= X^5 + 2X^4 - 7X^3 - 7X^2 + 10X -15
