--- a/7-guia/ejercicios-7-extra/ej-extra-5-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-5-7.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\ejExtra
 Sea $(f_n)_{(n\geq 1)}$ la sucesión de poliniomios en $\reales[X]$ definida como:
 $f_1 = X^5 + 3X^4 + 5X^3 + 11X^2 - 20$ y $f_{n+1} = (X + 2)^2 f'_n + 3 f_n$, para cada $n \en \naturales$.
 Probar que -2 es raíz doble de $f_n$ para todo $n \en \naturales$.
