--- a/7-guia/ejercicios-7-extra/ej-extra-6-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-6-7.tex
@@ -1,4 +1,5 @@
-\ejercicio
+\ejExtra
+
 \begin{enumerate}[label=\alph*)]
 \item
     Determinar todos los valores de $n\en\naturales$ \textbf{(positivo)} para los cuales el polinomio
@@ -9,7 +10,7 @@
 \item
 Para el o los valores hallados en el ítem (a), factorizar el polinomio $f$ obtenido como producto de irreducibles en $\racionales[X],\reales[X]$ y $\complejos[X]$ 
 
-\sepadaradorCorto
+\separadorCorto
 
 \begin{enumerate}[label=\alph*)]
 \item
