--- a/macros/indice.tex
+++ b/macros/indice.tex
@@ -21,7 +21,12 @@
 				      }
 		      \end{multicols}
 
-		\item \hyperlink{extras-\guia}{Ejercicios Extras}
+		\item Ejercicios Extras
+		      \begin{multicols}{8}
+			      \foreach \ejer in {1,...,\cantidadEjerciciosExtras}{
+					      \refEjExtra{ej:\ejer}\\
+				      }
+		      \end{multicols}
 
 	\end{itemize}
 \end{center}
