--- a/3-guia/ejercicios-3-extra/ej-extra-1-3.tex
+++ b/3-guia/ejercicios-3-extra/ej-extra-1-3.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\ejExtra
 Sea $\relacion \subseteq \partes(\naturales) \times \partes(\naturales)$ la relación de equivalencia
 $\to X \relacion Y \sisolosi X \triangle Y \subseteq \set{4,5,6,7,8}$.\\
 ¿Cuántos conjuntos hay en la clase de equivalencia de $X = \set{x \en \naturales : x \geq 6}$?
@@ -19,7 +19,7 @@ $\to X \relacion Y \sisolosi X \triangle Y \subseteq \set{4,5,6,7,8}$.\\
 Para tener una relación de equivalencia deben cumplirse:
 \begin{itemize}
 	\item Reflexividad. $X \triangle X = \vacio \stackrel{\checkmark}\subseteq \set{4,5,6,7,8}$
-	\item Simetría. $X \triangle Y \stackrel{\checkmark}= Y \triangle X,\, \paratodo X,Y \in \partes(\naturales)$
+	\item Simetría. $X \triangle Y \igual{\checkmark} Y \triangle X,\, \paratodo X,Y \in \partes(\naturales)$
 	\item Transitividad.
 \end{itemize}
 
