--- a/3-guia/ejercicios-3/ej-30-3.tex
+++ b/3-guia/ejercicios-3/ej-30-3.tex
@@ -16,5 +16,5 @@ Los conjuntos de 5 elementos serán de la forma:\\
 $\llave{c c c c c} % hay 5 en total
 	{
 		1 & 3 & \_ & \_ & \_   \\
-	} \flecha{5 elementos}[$ \inter \set{1,2,3} \stackrel{\checkmark}= \set{1,3}$] \binom{7}{3} = 35$. Los 7 números usados son $\set{4,5,\red{6},7,8,9,10}$ \\
+	} \flecha{5 elementos}[$ \inter \set{1,2,3} \igual{\checkmark} \set{1,3}$] \binom{7}{3} = 35$. Los 7 números usados son $\set{4,5,\red{6},7,8,9,10}$ \\
 \red{¿Es solo eso o interpreto mal la $\relacion$ u otra cosa?}
