--- a/4-guia/ejercicios-4-extra/ej-extra-1-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-1-4.tex
@@ -1,4 +1,4 @@
-\ejercicio  4400 ¿Cuántos divisores distintos tiene? ¿Cuánto vale la suma de sus divisores.\\
+\ejExtra  4400 ¿Cuántos divisores distintos tiene? ¿Cuánto vale la suma de sus divisores.\\
 \separadorCorto
 $
 	4400
