--- a/5-guia/ejercicios-5-extra/ej-extra-3-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-3-5.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\ejExtra
 Determinar todos los $n \en \enteros$ tales que
 $$(n^{433} + 7n + 91 : 931) = 133.$$
 Expresar las soluciones mediante una única ecuación.
