--- a/6-guia/ejercicios-6-extra/ej-extra-1-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-1-6.tex
@@ -1,4 +1,4 @@
-\ejercicio
+\ejExtra
 Para $w \en G_6$, calcular $S = w^{71} + w^{-14} + 5\conj w^4 + w^{39} - 4w^{-22} + w^{2023}$
 
 \separadorCorto
