--- a/3-guia/ejercicios-3/ej-1-3.tex
+++ b/3-guia/ejercicios-3/ej-1-3.tex
@@ -1,1 +1,9 @@
-\ejercicio\hacer
+\ejercicio
+
+Dado el conjunto referencial $V = \set{n \en \naturales : n \text{ es múltiplo de } 15}$, determinar el cardinal del\\
+complemento del subconjunto $A$ de $V$ definido por $A = \set{n \en V : n \geq 132}$.\\
+
+Se tiene que $A^c = \set{n \en V : n \ngeq 132} = \set{n \en V : n < 132}$.\\
+Así, $\#A^c = $ todos los múltiplos de 15 menores a 132. Lo calculo sacando la parte entera de $\frac{132}{15}$, o sea:\\
+
+$\#A^c = \lfloor \frac{132}{15} \rfloor = \lfloor 8,8 \rfloor = 8$
