--- a/macros/estructura-ejercicios.tex
+++ b/macros/estructura-ejercicios.tex
@@ -17,12 +17,11 @@
 
 \newpage % página nueva
 
-\setcounter{ejercicio}{0} % Reset el counter de \ejercicio
 %=========================
 % Ejercicios extras, parciales, etc.
 %=========================
 
-\subsubsection*{\hypertarget{extras-\guia}{Ejercicios extras:}}
+\subsubsection*{\hypertarget{extras-\guia}{{\Large\color{orange}{\faIcon{fire}}} Ejercicios extras:}}
 
 \foreach \x in {1,...,\cantidadEjerciciosExtras} { % cantidad de ejercicios extras
 		\input{./ejercicios-\guia-extra/ej-extra-\x-\guia.tex}
