fix incomplete set

--- a/3-guia/ejercicios-3/ej-2-3.tex
+++ b/3-guia/ejercicios-3/ej-2-3.tex
@@ -13,8 +13,8 @@ Pero $
 $\\
 Donde 
 $
-    A^c = \set{n \en V : n \text{ es múltiplo de } 3} \text{, }
-    B^c = \set{n \en V} \text{, }
+    A^c = \set{n \en V : n \text{ es múltiplo de } 3},
+    B^c = \set{n \en V : n \text{ es múltiplo de } 5},\\
     (A^c \inter B^c) = \set{n \en V : n \text{ es múltiplo de } 15}
 $\\
 
