--- a/7-guia/ejercicios-7-extra/ej-extra-6-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-6-7.tex
@@ -73,7 +73,7 @@ $$
 \polylongdiv[style=D]{X^4 + \frac{5}{3}X^3 - \frac{8}{3}X^2 + \frac{11}{3}X - 1}{X^2 + \frac{8}{3}X - 1}
 $$
 Factorizo el polinomio cuadratico $X^2 + \frac{8}{3}X - 1$
-$$ \Delta^2 = (-1)^2 - 4 \cdot 1 \cdot 1=-3 $$
+$$ \Delta = (-1)^2 - 4 \cdot 1 \cdot 1=-3 $$
 $$ x_+ = \frac{1 + \sqrt 3 i}{2} \in\complejos \text{ y } x_- = \frac{1 - \sqrt 3 i}{2} \in\complejos $$
 
 \textbf{Rta:}\\
