--- a/macros/indice.tex
+++ b/macros/indice.tex
@@ -23,8 +23,8 @@
 
 		\item Ejercicios Extras
 		      \begin{multicols}{8}
-			      \foreach \ejer in {1,...,\cantidadEjerciciosExtras}{
-					      \refEjExtra{ej:\ejer}\\
+			      \foreach \extras in {1,...,\cantidadEjerciciosExtras}{
+					      \refEjExtra{ejExtra:\extras}\\
 				      }
 		      \end{multicols}
 
